# Mobile_Robotics_Team22

./: .gitignore  README.md  csv_to_rosbag.py  okvis_setup.txt  rviz_config.rviz
ORB_SLAM3_modified/: CMakeLists.txt
ORB_SLAM3_modified/Examples/Monocular/: harbor.yaml  mono_harbor  mono_harbor.cc
ORB_SLAM3_modified/Examples/Monocular-Inertial/: harbor.yaml  mono_inertial_harbor  mono_inertial_harbor.cc
ORB_SLAM3_modified/include/: image_enhancement.h
ORB_SLAM3_modified/src/: LoopClosing.cc  Tracking.cc  guidedfilter.cc
data/har/: readme.txt
data/har/okvis_result_Apr_5/: aligned_enhanced1.txt  aligned_unenhanced1.txt  enhanced_simple_2.txt  enhanced_simple_3.txt  groundtruth_1.txt  unenhanced_1.txt  unenhanced_3.txt
data/har/okvis_results_Apr_1/: stamped_traj_estimate.txt
data/har/orbslam_results_Apr_1/: aligned_traj_est.txt
data/har/orbslam_results_Apr_5/: aligned_unenhanced1.txt  enhanced_2.txt  unenhanced_2.txt  unenhanced_3.txt
data/har_new/.ipynb_checkpoints/: Demo_Evaluation_Result-checkpoint.ipynb
evaluation/: Demo_Evaluation_Result.ipynb
evaluation/aligning_code_from_orbslam_old/: align_transform.py  evaluate_ate_scale.py
harbor_saved_output/: poses1.csv  poses2.csv  poses3.csv
image_enhancement/: CMakeLists.txt  main.cpp
modified_cave/: body.yaml
modified_cave/cam0/: rename_images.py  sensor.yaml
modified_cave/imu0/: sensor.yaml
okvis/config/: config_cave.yaml  config_harbor.yaml
okvis/okvis_cv/: CMakeLists.txt
utils/: check_matches.py  extract_timestamps.py  frame2timestamp.py  gtframe2timestamp.py
(+51 files in other folders)
